$Id$

NEWS for SoftHSM -- History of user visible changes

SoftHSM trunk - 2009-XX-XX

* The tool softhsm-keyconv can convert keys between BIND key file format
  and PKCS#8 file format. So it can be imported to SoftHSM.
  It can also convert back to BIND format.


SoftHSM 1.0.0 - 2009-09-30

* Using /usr/local, /etc, and /var as default
* Improved the performance of creating keys
* Log error message if database cannot be opened
* KNOWN BUG: A version of Botan available in some OS has a problem with 
             the entropy. This causes SoftHSM to freeze in some operations.
             Please upgrade to the Botan 1.8.5 or greater.


SoftHSM 1.0.0-RC3 - 2009-08-26

* Vacuum the empty space in the database when initializing it
* Minor speed improvment when searching for objects
* Fixed build problem with GCC >= 4.3
* Fixed some linking problem
* KNOWN BUG: A version of Botan available in some OS has a problem with 
             the entropy. This causes SoftHSM to freeze in some operations.
             Please upgrade to the Botan 1.8.5 or greater.


SoftHSM 1.0.0-RC2 - 2009-07-08

* Added a check for the Botan library in config script
* SoftHSM will not add a default label/ID to a key pair when the
  key pair is generated, as were the case in the previous
  versions.
* Improved database handling
* New database schema. Is not compliant with previous versions.
* Comments can be added to the config file by using #
* The default location of the config file is $sysconfdir/softhsm.conf
* Simplified the configure options
* The softhsm tool initialize the tokens by using the library.
* Import keys via PKCS#11 and the softhsm tool.
* Export keys via the softhsm tool


SoftHSM 1.0.0-RC1 - 2009-03-10

* Versioning moved to the configure script
* This is release candidate 1


SoftHSM 0.5 - 2009-02-20

* Admin tool for creating tokens.
* Config file in /etc/softhsm.conf
* All session objects are removed when the session creating
  them are closed.