@@ -61,14 +61,13 @@ class SoftDatabase {
     char* getUserPIN();
     CK_RV saveTokenInfo(int valueID, char *value, int length);
 
-    CK_OBJECT_HANDLE* getObjectRefs(CK_ULONG *objectCount);
     CK_BBOOL getBooleanAttribute(CK_OBJECT_HANDLE objectRef, CK_ATTRIBUTE_TYPE type, CK_BBOOL defaultValue);
     CK_OBJECT_CLASS getObjectClass(CK_OBJECT_HANDLE objectRef);
     CK_KEY_TYPE getKeyType(CK_OBJECT_HANDLE objectRef);
     BigInt getBigIntAttribute(CK_OBJECT_HANDLE objectRef, CK_ATTRIBUTE_TYPE type);
     CK_RV getAttribute(CK_OBJECT_HANDLE objectRef, CK_ATTRIBUTE *attTemplate);
     CK_RV setAttribute(CK_OBJECT_HANDLE objectRef, CK_ATTRIBUTE *attTemplate);
-    CK_BBOOL matchAttribute(CK_OBJECT_HANDLE objectRef, CK_ATTRIBUTE *attTemplate);
+    CK_OBJECT_HANDLE* getMatchingObjects(CK_ATTRIBUTE_PTR pTemplate, CK_ULONG ulCount, CK_ULONG *objectCount);
     CK_BBOOL hasObject(CK_OBJECT_HANDLE objectRef);
 
     CK_OBJECT_HANDLE addRSAKeyPub(RSA_PrivateKey *rsaKey, CK_ATTRIBUTE_PTR pPublicKeyTemplate,
@@ -93,12 +92,10 @@ class SoftDatabase {
     sqlite3_stmt *update_attribute_sql;
     sqlite3_stmt *insert_attribute_sql;
     sqlite3_stmt *insert_object_sql;
-    sqlite3_stmt *select_object_ids_sql;
     sqlite3_stmt *select_object_id_sql;
     sqlite3_stmt *select_attribute_sql;
     sqlite3_stmt *select_session_obj_sql;
     sqlite3_stmt *delete_object_sql;
-    sqlite3_stmt *count_object_id_sql;
     sqlite3_stmt *select_an_attribute_sql;
 };
 
